force-app/main/default/objects/StreamContentManagerSetting__mdt/StreamContentManagerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Information regarding Streaming Content Management Systems that have been integrated with Salesfoce</description>
    <label>Stream Content Manager Setting</label>
    <pluralLabel>Stream Content Manager Settings</pluralLabel>
</CustomObject>