force-app/main/default/objects/StreamContentManagerSetting__mdt/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <description>The Client ID</description>
    <inlineHelpText>The Client ID</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>