force-app/main/default/objects/StreamContentManagerSetting__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>The client secret.</description>
    <inlineHelpText>The client secret.</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>