force-app/main/default/objects/StreamContentManagerSetting__mdt/fields/EndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>EndpointUrl__c</fullName>
    <description>The base URl for the Endpoint of the API.</description>
    <inlineHelpText>The base URl for the Endpoint of the API.</inlineHelpText>
    <label>Endpoint Url Base</label>
    <type>Url</type>
</CustomField>